; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_controller.c_controller_stop.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_controller.c_controller_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.controller = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @controller_stop(%struct.controller* %0) #0 {
  %2 = alloca %struct.controller*, align 8
  store %struct.controller* %0, %struct.controller** %2, align 8
  %3 = load %struct.controller*, %struct.controller** %2, align 8
  %4 = getelementptr inbounds %struct.controller, %struct.controller* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @mutex_lock(i32 %5)
  %7 = load %struct.controller*, %struct.controller** %2, align 8
  %8 = getelementptr inbounds %struct.controller, %struct.controller* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load %struct.controller*, %struct.controller** %2, align 8
  %10 = getelementptr inbounds %struct.controller, %struct.controller* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @cond_signal(i32 %11)
  %13 = load %struct.controller*, %struct.controller** %2, align 8
  %14 = getelementptr inbounds %struct.controller, %struct.controller* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @mutex_unlock(i32 %15)
  ret void
}

declare dso_local i32 @mutex_lock(i32) #1

declare dso_local i32 @cond_signal(i32) #1

declare dso_local i32 @mutex_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
